<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:cardCornerRadius="24dp"
    android:elevation="50dp"
    android:id="@+id/item_card"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/item_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/item_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/expiry_date" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>